--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=techeerzip
 server.port=8000
 
 # Database Configuration
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB_NAME}?currentSchema=public
+spring.datasource.username=${POSTGRES_DB_NAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
@@ -24,16 +24,16 @@ spring.redis.password=${REDIS_PASSWORD}
 jwt.secret=${JWT_SECRET}
 
 # AWS S3 Configuration
-aws.s3.access-key=${AWS_ACCESS_KEY}
-aws.s3.secret-key=${AWS_SECRET_KEY}
+aws.s3.access-key=${AWS_S3_ACCESS_KEY}
+aws.s3.secret-key=${AWS_S3_SECRET_ACCESS_KEY}
 aws.s3.region=${AWS_REGION}
-aws.s3.bucket-name=${AWS_BUCKET_NAME}
+aws.s3.bucket-name=${AWS_S3_BUCKET_NAME}
 
 # Email Configuration
-spring.mail.host=${MAIL_HOST}
-spring.mail.port=${MAIL_PORT}
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USER}
+spring.mail.password=${EMAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -48,18 +48,19 @@ google.folder.id=${GOOGLE_FOLDER_ID}
 google.archive.folder.id=${GOOGLE_ARCHIVE_FOLDER_ID}
 
 # RabbitMQ Configuration
-spring.rabbitmq.host=${RABBITMQ_HOST}
-spring.rabbitmq.port=${RABBITMQ_PORT}
-spring.rabbitmq.username=${RABBITMQ_USERNAME}
-spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+spring.rabbitmq.url=${RABBITMQ_URL}
 
 # Logging Configuration
 logging.level.root=INFO
 logging.level.com.techeer=DEBUG
 
 # Swagger Configuration
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.path=/api/v1/docs
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
+
+# Swagger Authentication
+swagger.username=${SWAGGER_USER}
+swagger.password=${SWAGGER_PASSWORD}
