set : 로컬 env 세팅

--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=techeerzip
 server.port=8000
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB_NAME}?currentSchema=public
-spring.datasource.username=${POSTGRES_DB_NAME}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${POSTGRES_USERNAME}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
