--- a/techeerzip/.gitignore
+++ b/techeerzip/.gitignore
@@ -40,4 +40,50 @@ out/
 
 # Environment variables
 .env
-.env.*
+env.properties
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# Package Files
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# IDE specific files
+.idea/
+*.iml
+*.iws
+*.ipr
+.vscode/
+*.swp
+*.swo
+
+# Build directories
+target/
+build/
+out/
+
+# Gradle
+.gradle/
+gradle/
+!gradle/wrapper/
+!gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
+
+# Spring Boot
+application-*.properties
+!application.properties
+
+# Mac OS
+.DS_Store
