--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -9,11 +9,18 @@ spring.datasource.username=${POSTGRES_USERNAME}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA Configuration
+# JPA DDL
 spring.jpa.hibernate.ddl-auto=update
+# ?? & ??
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# PostgreSQL ??(?? ???? ?? ??)
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ???·?? ??? ??? ??
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # Redis Configuration
 spring.redis.host=${REDIS_HOST}
