--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 version: '3.8'
 
 services:
-    spring-boot:
-        container_name: spring-boot
-        build:
-            context: .
-            dockerfile: Dockerfile
-        restart: always
-        env_file:
-            - .env
-        ports:
-            - '8000:8000'
-        depends_on:
-            - postgresql
-            - redis
-            - rabbitmq
-        networks:
-            - techeerism
+    # spring-boot:
+    #     container_name: spring-boot
+    #     build:
+    #         context: .
+    #         dockerfile: Dockerfile
+    #     restart: always
+    #     env_file:
+    #         - .env
+    #     ports:
+    #         - '8000:8000'
+    #     depends_on:
+    #         - postgresql
+    #         - redis
+    #         - rabbitmq
+    #     networks:
+    #         - techeerism
 
     postgresql:
         container_name: postgresql
@@ -35,20 +35,20 @@ services:
         networks:
             - techeerism
 
-    pgadmin:
-        image: dpage/pgadmin4
-        restart: always
-        container_name: pgadmin4
-        user: root
-        ports:
-            - '5050:80'
-        environment:
-            PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-            PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-        volumes:
-            - techeerism-db:/techeerism-db/pgadmin-data
-        networks:
-            - techeerism
+    # pgadmin:
+    #     image: dpage/pgadmin4
+    #     restart: always
+    #     container_name: pgadmin4
+    #     user: root
+    #     ports:
+    #         - '5050:80'
+    #     environment:
+    #         PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+    #         PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    #     volumes:
+    #         - techeerism-db:/techeerism-db/pgadmin-data
+    #     networks:
+    #         - techeerism
 
     rabbitmq:
         image: 'rabbitmq:3-management'
@@ -77,14 +77,14 @@ services:
         networks:
             - techeerism
 
-    redis-insight:
-        container_name: redis-insight
-        image: redislabs/redisinsight:latest
-        restart: always
-        ports:
-            - '8001:8001'
-        networks:
-            - techeerism
+    # redis-insight:
+    #     container_name: redis-insight
+    #     image: redislabs/redisinsight:latest
+    #     restart: always
+    #     ports:
+    #         - '8001:8001'
+    #     networks:
+    #         - techeerism
     
     search-container:
         image: teami2022/watchtower-test:arm-search
