fix: entity(blog, study, project, stack)

--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -1,34 +1,29 @@
 spring.application.name=techeerzip
-
 # Server Configuration
 server.port=8000
-
 # Database Configuration
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${POSTGRES_USERNAME}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 # Redis Configuration
 spring.redis.host=${REDIS_HOST}
 spring.redis.port=${REDIS_PORT}
 spring.redis.password=${REDIS_PASSWORD}
-
 # JWT Configuration
 jwt.secret=${JWT_SECRET}
-
 # AWS S3 Configuration
 aws.s3.access-key=${AWS_S3_ACCESS_KEY}
 aws.s3.secret-key=${AWS_S3_SECRET_ACCESS_KEY}
 aws.s3.region=${AWS_REGION}
 aws.s3.bucket-name=${AWS_S3_BUCKET_NAME}
-
 # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -36,7 +31,6 @@ spring.mail.username=${EMAIL_USER}
 spring.mail.password=${EMAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
 # Google Drive Configuration
 google.auth.type=${GOOGLE_AUTH_TYPE}
 google.auth.project-id=${GOOGLE_PROJECT_ID}
@@ -46,21 +40,17 @@ google.auth.client-email=${GOOGLE_CLIENT_EMAIL}
 google.auth.client-id=${GOOGLE_CLIENT_ID}
 google.folder.id=${GOOGLE_FOLDER_ID}
 google.archive.folder.id=${GOOGLE_ARCHIVE_FOLDER_ID}
-
 # RabbitMQ Configuration
 spring.rabbitmq.url=${RABBITMQ_URL}
-
 # Logging Configuration
 logging.level.root=INFO
 logging.level.com.techeer=DEBUG
-
 # Swagger Configuration
 springdoc.swagger-ui.path=/api/v1/docs
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
-
 # Swagger Authentication
 swagger.username=${SWAGGER_USER}
 swagger.password=${SWAGGER_PASSWORD}
