--- a/techeerzip/build.gradle
+++ b/techeerzip/build.gradle
@@ -54,11 +54,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'com.vladmihalcea:hibernate-types-60:2.21.1'
 
     // Logback
     implementation 'ch.qos.logback:logback-classic'
     implementation 'ch.qos.logback:logback-core'
     implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
+    implementation 'org.projectlombok:lombok:1.18.30'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
