--- a/techeerzip/build.gradle
+++ b/techeerzip/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // S3
+    implementation "software.amazon.awssdk:s3:2.31.32"
 }
 
 tasks.named('test') {
