feat: CI for spring

--- a/techeerzip/build.gradle
+++ b/techeerzip/build.gradle
@@ -20,6 +20,13 @@ configurations {
     }
 }
 
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        exclude group: "org.springframework.boot", module: "spring-boot-devtools"
+    }
+}
+
 repositories {
     mavenCentral()
 }
