--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,9 +1,9 @@
-name: Staing CI
+name: Prod CI
 
 on:
   push:
     branches:
-      - develop
+      - main # 메인 브렌치에 브랜치 머지 시 자동으로 실행
 
 jobs:
   build:
@@ -19,14 +19,27 @@ jobs:
 #         run: |
 #           npm install
 
+#       # - name: Run Tests and Generate Coverage
+#       #   run: |
+#       #       npm run test:cov
+
+#       # - name: Upload coverage to Codecov
+#       #   uses: codecov/codecov-action@v4
+#       #   with:
+#       #       token: ${{ secrets.CODECOV_TOKEN }}
+#       #       flags: unittests # optional
+#       #       name: codecov-coverage
+
       - name: Show build number
         run: |
           echo "Build Number: ${{ github.run_number }}"
       - name: Show pull request number
+        if: ${{ github.event_name == 'pull_request' }}
         run: |
           echo "PR Number: ${{ github.event.pull_request.number }}"
       - name: Get PR Number for Main Branch Merge
         id: get_pr_number
+        if: github.ref == 'refs/heads/main'
         run: |
           PR_NUMBER=$(gh pr list --repo ${{ github.repository }} --state closed --json number,mergeCommit --jq ".[] | select(.mergeCommit.oid == \"${{ github.sha }}\") | .number")
           echo "PR_NUMBER=${PR_NUMBER}"
@@ -38,7 +51,7 @@ jobs:
         env:
           PR_NUMBER: ${{ steps.get_pr_number.outputs.PR_NUMBER }}
         run: |
-          DOCKER_IMAGE_TAG="1.1.$PR_NUMBER"-dev
+          DOCKER_IMAGE_TAG="1.1.$PR_NUMBER"
           echo "Docker Image Tag: $DOCKER_IMAGE_TAG"
           echo "DOCKER_IMAGE_TAG"="${DOCKER_IMAGE_TAG}" >> $GITHUB_OUTPUT
 
@@ -62,6 +75,7 @@ jobs:
             -t ${{ secrets.DOCKER_HUB_USERNAME }}/techeerism-spring:$DOCKER_IMAGE_TAG .
 
       - name: Send Image and Version to Slack
+        if: github.ref == 'refs/heads/main' # main 브랜치에 머지 시에만 실행
         env:
           IMAGE_NAME: ${{ secrets.DOCKER_HUB_USERNAME }}/techeerism-spring
           DOCKER_IMAGE_TAG: ${{ steps.set_docker_image_tag.outputs.DOCKER_IMAGE_TAG }}
@@ -74,6 +88,6 @@ jobs:
                 "imageName": "'"$IMAGE_NAME"'",
                 "imageTag": "'"$DOCKER_IMAGE_TAG"'",
                 "commitLink": "'"$commit_link"'",
-                "environment": "staging",
+                "environment": "production",
                 "secret": "'"$SLACK_SECRET"'"
               }'
