--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -8,28 +8,36 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
-#       - name: Set up Node
-#         uses: actions/setup-node@v4
-#         with:
-#           node-version: '18'
 
-#       - name: Install Dependencies
-#         run: |
-#           npm install
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: gradle
 
-#       # - name: Run Tests and Generate Coverage
-#       #   run: |
-#       #       npm run test:cov
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
-#       # - name: Upload coverage to Codecov
-#       #   uses: codecov/codecov-action@v4
-#       #   with:
-#       #       token: ${{ secrets.CODECOV_TOKEN }}
-#       #       flags: unittests # optional
-#       #       name: codecov-coverage
+      - name: Run tests with coverage
+        run: ./gradlew test jacocoTestReport # 단위 테스트 
 
+      - name: Check coverage
+        uses: madrapps/jacoco-report@v1.7.2
+        with:
+          paths: |
+            ${{ github.workspace }}/**/build/reports/jacoco/test/html/index.html
+            ${{ github.workspace }}/**/build/reports/jacoco/test/jacocoTestReport.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 80
+          min-coverage-changed-files: 80
+          title: JaCoCo Coverage Report
+          update-comment: true
+    
       - name: Show build number
         run: |
           echo "Build Number: ${{ github.run_number }}"
