--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -10,14 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-#       - name: Set up Node
-#         uses: actions/setup-node@v4
-#         with:
-#           node-version: '18'
 
-#       - name: Install Dependencies
-#         run: |
-#           npm install
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: gradle
 
       - name: Show build number
         run: |
