--- a/techeerzip/src/test/resources/application-test.properties
+++ b/techeerzip/src/test/resources/application-test.properties
@@ -1,14 +1,13 @@
-# Test Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/techeerism_test
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+# 기본 H2 메모리 DB 연결 (PostgreSQL 모드)
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-# JPA Configuration
+# 테스트니까 스키마 자동 생성/삭제
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Test Configuration
-spring.test.database.replace=none 
+# slice 테스트에서 자동 교체 비활성화
+spring.test.database.replace=NONE
