--- a/techeerzip/build.gradle
+++ b/techeerzip/build.gradle
@@ -171,5 +171,5 @@ tasks.named('jacocoTestCoverageVerification') {
 // 테스트 task 마무리 설정
 tasks.test {
     useJUnitPlatform()
-    finalizedBy tasks.jacocoTestReport, tasks.jacocoTestCoverageVerification
+    finalizedBy tasks.jacocoTestReport
 }
