--- a/techeerzip/build.gradle
+++ b/techeerzip/build.gradle
@@ -72,7 +72,7 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
-    finalizedBy jacocoTestReport, jacocoTestCoverageVerification
+    finalizedBy jacocoTestReport
 }
 
 // QueryDSL 설정
