--- a/techeerzip/build.gradle
+++ b/techeerzip/build.gradle
@@ -70,7 +70,9 @@ dependencies {
     implementation "software.amazon.awssdk:s3:2.31.32"
 }
 
-tasks.named('test') {
+tasks.named('test', Test) {
+    systemProperty 'spring.profiles.active', 'test'
+    systemProperty 'spring.config.location', "$projectDir/src/test/resources/application-test.properties"
     useJUnitPlatform()
     finalizedBy jacocoTestReport
 }
