set : 테스트 코드 수정

--- a/.github/workflows/other.yml
+++ b/.github/workflows/other.yml
@@ -28,7 +28,9 @@ jobs:
       - name: Run tests with coverage
         run: |
           cd techeerzip
-          ./gradlew test jacocoTestReport
+          ./gradlew test jacocoTestReport \
+            -Dspring.profiles.active=test \
+            -Dspring.config.location=src/test/resources/application-test.properties
 
       - name: Check coverage
         continue-on-error: true
