--- a/techeerzip/src/test/resources/application-test.properties
+++ b/techeerzip/src/test/resources/application-test.properties
@@ -11,3 +11,46 @@ spring.jpa.show-sql=true
 
 # slice 테스트에서 자동 교체 비활성화
 spring.test.database.replace=NONE
+
+# ???? Redis (??? Redis? ??? ??? ?? dummy ?)
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password= # ?? ?
+
+# JWT Configuration
+jwt.secret=
+# AWS S3 Configuration
+aws.s3.region=us-east-1
+aws.s3.access-key=test
+aws.s3.secret-key=test
+aws.s3.bucket-name=test
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=test
+spring.mail.password=test
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+# Google Drive Configuration
+google.auth.type=test
+google.auth.project-id=test
+google.auth.private-key-id=test
+google.auth.private-key=test
+google.auth.client-email=test
+google.auth.client-id=test
+google.folder.id=test
+google.archive.folder.id=test
+# RabbitMQ Configuration
+spring.rabbitmq.url=test
+# Logging Configuration
+logging.level.root=INFO
+logging.level.com.techeer=DEBUG
+# Swagger Configuration
+springdoc.swagger-ui.path=/api/v3/docs
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+# Swagger Authentication
+swagger.username=test
+swagger.password=test
