--- a/.github/workflows/other.yml
+++ b/.github/workflows/other.yml
@@ -1,5 +1,8 @@
 name: Other CI
 
+permissions:
+  contents: read   
+  checks: write   
 on:
   pull_request:
     branches:
@@ -8,8 +11,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
     steps:
       - uses: actions/checkout@v4
 
