fix : 코드 커버리지 생성 및 스웨거 설정 수정

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,5 +1,9 @@
 name: Prod CI
 
+permissions:
+  contents: read   
+  checks: write   
+
 on:
   push:
     branches:
@@ -30,18 +34,16 @@ jobs:
           cd techeerzip
           ./gradlew test jacocoTestReport
 
-      - name: Check coverage
-        continue-on-error: true
-        uses: madrapps/jacoco-report@v1.7.2
+      - name: Publish Jacoco coverage report
+        uses: PavanMudigonda/jacoco-reporter@v5.0
         with:
-          paths: |
-            ${{ github.workspace }}/techeerzip/build/reports/jacoco/test/html/index.html
-            ${{ github.workspace }}/techeerzip/build/reports/jacoco/test/jacocoTestReport.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
-          min-coverage-overall: 30  
-          min-coverage-changed-files: 50
-          title: JaCoCo Coverage Report
-          update-comment: true
+          coverage_results_path: techeerzip/build/reports/jacoco/test/jacocoTestReport.xml
+          coverage_paths: techeerzip/build/reports/jacoco/test/html/index.html
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          minimum_coverage: 30
+          fail_below_threshold: false
+          output_level: inline
+          coverage_report_name: JaCoCo Coverage
     
       - name: Show build number
         run: |
