--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -56,6 +56,7 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.use-root-path=true
 # Swagger Authentication
 swagger.username=${SWAGGER_USER}
 swagger.password=${SWAGGER_PASSWORD}
