--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -57,6 +57,9 @@ springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
 springdoc.swagger-ui.use-root-path=true
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 # Swagger Authentication
 swagger.username=${SWAGGER_USER}
 swagger.password=${SWAGGER_PASSWORD}
+
+spring.logger.level=${LOGGER_LEVEL}
