set : 스웨거 설정 추가

--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -52,12 +52,12 @@ logging.level.root=INFO
 logging.level.com.techeer=DEBUG
 # Swagger Configuration
 springdoc.swagger-ui.path=/api/v3/docs
-springdoc.api-docs.path=/v3/api-docs
+springdoc.api-docs.path=/api/v3/api-docs
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
-springdoc.swagger-ui.use-root-path=true
-springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+# springdoc.swagger-ui.use-root-path=true
+# springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 # Swagger Authentication
 swagger.username=${SWAGGER_USER}
 swagger.password=${SWAGGER_PASSWORD}
