set: jacoco github actions 세팅 (#3) BACKEND-60
* set: jacoco github actions 세팅

* fix: 잘못된 경로 수정

* fix: 빌드 오류 해결

* fix: 테스트코드 수정

* fix : gitignore

* fix : 테스트 코드 설정 수정

* fix : ci 수정

* fix: 테스트코드 수정

* fix: 테스트코드 수정

* fix: 테스트코드 수정

* fix: 테스트코드 수정

* fix: 테스트코드 수정

* set : 테스트 코드 수정

* fix : application-test.properties 수정

* fix: ci 수정

* fix : ci 수정

* fix : ci 수정

* fix : ci 수정

* fix : ci 수정

* fix : ci 수정

* set : ci 수정

* fix : CORS 설정 수정

* fix : 코드 커버리지 생성 및 스웨거 설정 수정

* fix : ci 수정

* fix : swagger config 경로 지정

* set : 스웨거 설정 추가

* fix : 불필요한 코드 제거

--- a/.github/workflows/other.yml
+++ b/.github/workflows/other.yml
@@ -1,13 +1,13 @@
 name: Other CI
 
 permissions:
-  contents: read   
-  checks: write   
-  
+  contents: read
+  checks: write
+
 on:
   pull_request:
     branches:
-      - '**' # 모든 브랜치에 PR 올릴 때 실행
+      - "**" # 모든 브랜치에 PR 올릴 때 실행
 
 jobs:
   build:
