--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -55,9 +55,12 @@ springdoc.api-docs.path=/api/v3/api-docs
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
+# springdoc.swagger-ui.use-root-path=true
+# springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 # Swagger Authentication
 swagger.username=${SWAGGER_USER}
 swagger.password=${SWAGGER_PASSWORD}
 
 https.server.url=${HTTPS_SERVER_URL}
 staging.server.url=${STAGING_SERVER_URL}
+spring.logger.level=${LOGGER_LEVEL}
