set: jacoco github actions 세팅 (#3) BACKEND-60
* set: jacoco github actions 세팅

* fix: 잘못된 경로 수정

* fix: 빌드 오류 해결

* fix: 테스트코드 수정

* fix : gitignore

* fix : 테스트 코드 설정 수정

* fix : ci 수정

* fix: 테스트코드 수정

* fix: 테스트코드 수정

* fix: 테스트코드 수정

* fix: 테스트코드 수정

* fix: 테스트코드 수정

* set : 테스트 코드 수정

* fix : application-test.properties 수정

* fix: ci 수정

* fix : ci 수정

* fix : ci 수정

* fix : ci 수정

* fix : ci 수정

* fix : ci 수정

* set : ci 수정

* fix : CORS 설정 수정

* fix : 코드 커버리지 생성 및 스웨거 설정 수정

* fix : ci 수정

* fix : swagger config 경로 지정

* set : 스웨거 설정 추가

* fix : 불필요한 코드 제거

--- a/.github/workflows/other.yml
+++ b/.github/workflows/other.yml
@@ -1,5 +1,9 @@
 name: Other CI
 
+permissions:
+  contents: read   
+  checks: write   
+  
 on:
   pull_request:
     branches:
@@ -10,25 +14,34 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-#       - name: Set up Node
-#         uses: actions/setup-node@v4
-#         with:
-#           node-version: '18'
 
-#       - name: Install Dependencies
-#         run: |
-#           npm install
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: gradle
 
-      # - name: Run Tests and Generate Coverage
-      #   run: |
-      #       npm run test:cov
+      - name: Grant execute permission for gradlew
+        run: |
+          cd techeerzip
+          chmod +x gradlew
 
-      # - name: Upload coverage to Codecov
-      #   uses: codecov/codecov-action@v4
-      #   with:
-      #       token: ${{ secrets.CODECOV_TOKEN }}
-      #       flags: unittests # optional
-      #       name: codecov-coverage
+      - name: Run tests with coverage
+        run: |
+          cd techeerzip
+          ./gradlew test jacocoTestReport
+
+      - name: Publish Jacoco coverage report
+        uses: PavanMudigonda/jacoco-reporter@v5.0
+        with:
+          coverage_results_path: techeerzip/build/reports/jacoco/test/jacocoTestReport.xml
+          coverage_paths: techeerzip/build/reports/jacoco/test/html/index.html
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          minimum_coverage: 30
+          fail_below_threshold: false
+          output_level: inline
+          coverage_report_name: JaCoCo Coverage
 
       - name: Show build number
         run: |
