--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -44,7 +44,7 @@ google.auth.private-key=${GOOGLE_PRIVATE_KEY}
 google.auth.client-email=${GOOGLE_CLIENT_EMAIL}
 google.auth.client-id=${GOOGLE_CLIENT_ID}
 google.folder.id=${GOOGLE_FOLDER_ID}
-google.archive.folder.id=${GOOGLE_ARCHIVE_FOLDER_ID}
+google.archive.folder.id=${ARCHIVE_FOLDER_ID}
 # RabbitMQ Configuration
 spring.rabbitmq.url=${RABBITMQ_URL}
 # Logging Configuration
@@ -52,10 +52,14 @@ logging.level.root=INFO
 logging.level.com.techeer=DEBUG
 # Swagger Configuration
 springdoc.swagger-ui.path=/api/v3/docs
-springdoc.api-docs.path=/v3/api-docs
+springdoc.api-docs.path=/api/v3/api-docs
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
+# springdoc.swagger-ui.use-root-path=true
+# springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 # Swagger Authentication
 swagger.username=${SWAGGER_USER}
 swagger.password=${SWAGGER_PASSWORD}
+
+spring.logger.level=${LOGGER_LEVEL}
