--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -8,28 +8,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
-#       - name: Set up Node
-#         uses: actions/setup-node@v4
-#         with:
-#           node-version: '18'
-
-#       - name: Install Dependencies
-#         run: |
-#           npm install
-
-#       # - name: Run Tests and Generate Coverage
-#       #   run: |
-#       #       npm run test:cov
-
-#       # - name: Upload coverage to Codecov
-#       #   uses: codecov/codecov-action@v4
-#       #   with:
-#       #       token: ${{ secrets.CODECOV_TOKEN }}
-#       #       flags: unittests # optional
-#       #       name: codecov-coverage
-
+      
       - name: Show build number
         run: |
           echo "Build Number: ${{ github.run_number }}"
