--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -19,9 +19,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 # Redis Configuration
-spring.redis.host=${REDIS_HOST}
-spring.redis.port=${REDIS_PORT}
-spring.redis.password=${REDIS_PASSWORD}
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.password=${REDIS_PASSWORD}
 # JWT Configuration
 jwt.secret=${JWT_SECRET}
 # AWS S3 Configuration
@@ -46,20 +46,15 @@ google.auth.client-id=${GOOGLE_CLIENT_ID}
 google.folder.id=${GOOGLE_FOLDER_ID}
 google.archive.folder.id=${ARCHIVE_FOLDER_ID}
 # RabbitMQ Configuration
-spring.rabbitmq.url=${RABBITMQ_URL}
+spring.rabbitmq.addresses=${RABBITMQ_URL}
 # Logging Configuration
-logging.level.root=INFO
-logging.level.com.techeer=DEBUG
+spring.profiles.active=${LOGGER_LEVEL:development}
 # Swagger Configuration
 springdoc.swagger-ui.path=/api/v3/docs
 springdoc.api-docs.path=/api/v3/api-docs
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
-# springdoc.swagger-ui.use-root-path=true
-# springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 # Swagger Authentication
 swagger.username=${SWAGGER_USER}
 swagger.password=${SWAGGER_PASSWORD}
-
-spring.logger.level=${LOGGER_LEVEL}
