--- a/techeerzip/src/test/resources/application-test.properties
+++ b/techeerzip/src/test/resources/application-test.properties
@@ -1,21 +1,17 @@
-# 기본 H2 메모리 DB 연결 (PostgreSQL 모드)
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# 테스트니까 스키마 자동 생성/삭제
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 
-# slice 테스트에서 자동 교체 비활성화
 spring.test.database.replace=NONE
 
-# ???? Redis (??? Redis? ??? ??? ?? dummy ?)
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password= # ?? ?
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
 
 # JWT Configuration
 jwt.secret=
@@ -43,8 +39,8 @@ google.archive.folder.id=test
 # RabbitMQ Configuration
 spring.rabbitmq.url=test
 # Logging Configuration
-logging.level.root=INFO
-logging.level.com.techeer=DEBUG
+spring.profiles.active=${LOGGER_LEVEL:development}
+
 # Swagger Configuration
 springdoc.swagger-ui.path=/api/v3/docs
 springdoc.api-docs.path=/v3/api-docs
