--- a/techeerzip/build.gradle
+++ b/techeerzip/build.gradle
@@ -28,7 +28,7 @@ repositories {
 
 dependencies {
     // test H2
-    testImplementation 'com.h2database:h2:2.2.224'
+    testImplementation "com.h2database:h2:2.2.224"
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -40,7 +40,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
-    implementation 'com.vladmihalcea:hibernate-types-60:2.21.1'
 
     // Logback
     implementation 'ch.qos.logback:logback-classic'
