--- a/techeerzip/build.gradle
+++ b/techeerzip/build.gradle
@@ -42,6 +42,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'com.vladmihalcea:hibernate-types-60:2.21.1'
 
+    // JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
     // Logback
     implementation 'ch.qos.logback:logback-classic'
     implementation 'ch.qos.logback:logback-core'
