WIP on BACKEND-63

--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -58,3 +58,6 @@ springdoc.swagger-ui.tryItOutEnabled=true
 # Swagger Authentication
 swagger.username=${SWAGGER_USER}
 swagger.password=${SWAGGER_PASSWORD}
+
+https.server.url=${HTTPS_SERVER_URL}
+staging.server.url=${STAGING_SERVER_URL}
