--- a/.github/workflows/other.yml
+++ b/.github/workflows/other.yml
@@ -15,33 +15,33 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: gradle
+      # - name: Set up JDK 21
+      #   uses: actions/setup-java@v3
+      #   with:
+      #     java-version: '21'
+      #     distribution: 'temurin'
+      #     cache: gradle
 
-      - name: Grant execute permission for gradlew
-        run: |
-          cd techeerzip
-          chmod +x gradlew
+      # - name: Grant execute permission for gradlew
+      #   run: |
+      #     cd techeerzip
+      #     chmod +x gradlew
 
-      - name: Run tests with coverage
-        run: |
-          cd techeerzip
-          ./gradlew test jacocoTestReport
+      # - name: Run tests with coverage
+      #   run: |
+      #     cd techeerzip
+      #     ./gradlew test jacocoTestReport
 
-      - name: Publish Jacoco coverage report
-        uses: PavanMudigonda/jacoco-reporter@v5.0
-        with:
-          coverage_results_path: techeerzip/build/reports/jacoco/test/jacocoTestReport.xml
-          coverage_paths: techeerzip/build/reports/jacoco/test/html/index.html
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          minimum_coverage: 30
-          fail_below_threshold: false
-          output_level: inline
-          coverage_report_name: JaCoCo Coverage
+      # - name: Publish Jacoco coverage report
+      #   uses: PavanMudigonda/jacoco-reporter@v5.0
+      #   with:
+      #     coverage_results_path: techeerzip/build/reports/jacoco/test/jacocoTestReport.xml
+      #     coverage_paths: techeerzip/build/reports/jacoco/test/html/index.html
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     minimum_coverage: 30
+      #     fail_below_threshold: false
+      #     output_level: inline
+      #     coverage_report_name: JaCoCo Coverage
 
       - name: Show build number
         run: |
