--- a/techeerzip/build.gradle
+++ b/techeerzip/build.gradle
@@ -125,55 +125,55 @@ spotless {
 // Spotless가 compileJava 이후에 실행되도록 설정
 spotlessJava.dependsOn compileJava
 
-jacoco {
-    toolVersion = "0.8.11"
-}
+//jacoco {
+//    toolVersion = "0.8.11"
+//}
+//
+//// 공통 exclusion 패턴 정의
+//def jacocoExcluded = [
+//        '**/Q*.class',      // QueryDSL generated
+//        '**/*Builder*',     // Lombok builder
+//        '**/dto/**',        // DTO
+//        '**/exception/**',  // Exception
+//        '**/config/**',     // Config
+//        '**/infra/**',      // Infra (S3, MQ 등)
+//        '**/global/**'      // Global 패키지
+//]
 
-// 공통 exclusion 패턴 정의
-def jacocoExcluded = [
-        '**/Q*.class',      // QueryDSL generated
-        '**/*Builder*',     // Lombok builder
-        '**/dto/**',        // DTO
-        '**/exception/**',  // Exception
-        '**/config/**',     // Config
-        '**/infra/**',      // Infra (S3, MQ 등)
-        '**/global/**'      // Global 패키지
-]
+// // jacocoReport
+// tasks.named('jacocoTestReport') {
+//     dependsOn test
+//     reports {
+//         xml.required = true
+//         html.required = true
+//     }
+//     classDirectories.setFrom(files(
+//             classDirectories.files.collect { fileTree(dir: it, exclude: jacocoExcluded) }
+//     ))
+// }
 
-// jacocoReport
-tasks.named('jacocoTestReport') {
-    dependsOn test
-    reports {
-        xml.required = true
-        html.required = true
-    }
-    classDirectories.setFrom(files(
-            classDirectories.files.collect { fileTree(dir: it, exclude: jacocoExcluded) }
-    ))
-}
+// // jacocoCoverage 확인
+// tasks.named('jacocoTestCoverageVerification') {
+//     classDirectories.setFrom(files(
+//             classDirectories.files.collect { fileTree(dir: it, exclude: jacocoExcluded) }
+//     ))
 
-// jacocoCoverage 확인
-tasks.named('jacocoTestCoverageVerification') {
-    classDirectories.setFrom(files(
-            classDirectories.files.collect { fileTree(dir: it, exclude: jacocoExcluded) }
-    ))
-
-    violationRules {
-        rule {
-            element = 'CLASS'
-            limit {
-                counter = 'LINE'
-                value   = 'COVEREDRATIO'
-                minimum = 0.00
-            }
-            limit {
-                counter = 'BRANCH'
-                value   = 'COVEREDRATIO'
-                minimum = 0.00
-            }
-        }
-    }
-}
+//     violationRules {
+//         rule {
+//             element = 'CLASS'
+//             limit {
+//                 counter = 'LINE'
+//                 value   = 'COVEREDRATIO'
+//                 minimum = 0.00
+//             }
+//             limit {
+//                 counter = 'BRANCH'
+//                 value   = 'COVEREDRATIO'
+//                 minimum = 0.00
+//             }
+//         }
+//     }
+// }
 
 // 테스트 task 마무리 설정
 tasks.test {
