--- a/techeerzip/build.gradle
+++ b/techeerzip/build.gradle
@@ -73,6 +73,12 @@ dependencies {
 
     // S3
     implementation "software.amazon.awssdk:s3:2.31.32"
+
+    // GoogleDrive
+    implementation 'com.google.api-client:google-api-client:2.0.0'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+    implementation 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'
+    implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
 }
 
 tasks.named('test', Test) {
