--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -59,5 +59,7 @@ springdoc.swagger-ui.tryItOutEnabled=true
 swagger.username=${SWAGGER_USER}
 swagger.password=${SWAGGER_PASSWORD}
 
+spring.logger.level=${LOGGER_LEVEL}
+
 https.server.url=${HTTPS_SERVER_URL}
 staging.server.url=${STAGING_SERVER_URL}
