fix: 로깅 레벨 설정

--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -49,6 +49,10 @@ google.archive.folder.id=${ARCHIVE_FOLDER_ID}
 spring.rabbitmq.addresses=${RABBITMQ_URL}
 # Logging Configuration
 spring.profiles.active=${LOGGER_LEVEL:development}
+logging.level.root=INFO
+logging.level.backend.techeerzip=INFO
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
 # Swagger Configuration
 springdoc.swagger-ui.path=/api/v3/docs
 springdoc.api-docs.path=/api/v3/api-docs
