fix: application.properties 잘못된 네이밍 수정, Resume엔티티 필드중복선언 수정

--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -44,7 +44,7 @@ google.auth.private-key=${GOOGLE_PRIVATE_KEY}
 google.auth.client-email=${GOOGLE_CLIENT_EMAIL}
 google.auth.client-id=${GOOGLE_CLIENT_ID}
 google.folder.id=${GOOGLE_FOLDER_ID}
-google.archive.folder.id=${ARCHIVE_FOLDER_ID}
+google.archive.folder.id=${GOOGLE_ARCHIVE_FOLDER_ID}
 # RabbitMQ Configuration
 spring.rabbitmq.addresses=${RABBITMQ_URL}
 # Logging Configuration
