--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -68,5 +68,5 @@ jobs:
                 "imageName": "'"$IMAGE_NAME"'",
                 "imageTag": "'"$DOCKER_IMAGE_TAG"'",
                 "commitLink": "'"$commit_link"'",
-                "environment": "staging",
+                "environment": "staging"
               }'
