fix: 하이버네이트 로그 비활성화

--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -14,8 +14,9 @@ spring.servlet.multipart.file-size-threshold=0B
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 # Redis Configuration
@@ -49,6 +50,10 @@ google.archive.folder.id=${GOOGLE_ARCHIVE_FOLDER_ID}
 spring.rabbitmq.addresses=${RABBITMQ_URL}
 # Logging Configuration
 spring.profiles.active=${LOGGER_LEVEL:development}
+spring.logger.level=${LOGGER_LEVEL}
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=OFF
+logging.level.org.hibernate.type.descriptor.sql=OFF
 # Swagger Configuration
 springdoc.swagger-ui.path=/api/v3/docs
 springdoc.api-docs.path=/api/v3/api-docs
@@ -58,8 +63,6 @@ springdoc.swagger-ui.tryItOutEnabled=true
 # Swagger Authentication
 swagger.username=${SWAGGER_USER}
 swagger.password=${SWAGGER_PASSWORD}
-
-spring.logger.level=${LOGGER_LEVEL}
 
 https.server.url=${HTTPS_SERVER_URL}
 staging.server.url=${STAGING_SERVER_URL}
